--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/koa-passport": "^6.0.3",
     "@types/koa-router": "^7.4.8",
     "@types/koa-static": "^4.0.4",
+    "@vitejs/plugin-react": "^4.3.1",
     "fs": "^0.0.1-security",
     "jsonschema": "^1.4.1",
     "koa": "^2.15.2",
@@ -35,7 +36,8 @@
     "sequelize": "^6.37.3",
     "tsx": "^4.7.1",
     "typescript": "^5.4.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vite": "^5.2.13"
   },
   "devDependencies": {
     "@types/mime-types": "^2.1.4",
